--- a/404.html
+++ b/404.html
@@ -2,14 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <script language="javascript" type="text/javascript" src="/js/jquery.js"></script>
-    <link rel="stylesheet" href="/404/c64charset.css" type="text/css" media="screen" />
+    <script language="javascript" type="text/javascript" src="./js/jquery.js"></script>
+    <link rel="stylesheet" href="./404/c64charset.css" type="text/css" media="screen" />
     <style>
     * {
         margin: 0px;
         padding: 0px;
     }
-    /* body { background:#7b73de url(/404/c64.gif) no-repeat center 50px scroll; } */
+    /* body { background:#7b73de url(./404/c64.gif) no-repeat center 50px scroll; } */
 
     body {
         background: #7b73de
